# SnowMeme

./: .gitignore  Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: config.rs  main.rs  task.rs
src/data/: fetch_meta.rs  get_picture.rs  greeting  mod.rs
src/post/: mod.rs
