[package]
name = "xbot"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["json_format", "rolling_file_appender", "time_trigger"] }
more-config = { version = "2.1.4", features = ["all"] }
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["full"] }
tweety-rs = "0.1.4"
