[package]
name = "snow-meme"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.30"
lazy_static = "1.5.0"
log = "0.4.22"
log4rs = { version = "1.3.0", features = ["json_format", "rolling_file_appender", "time_trigger"] }
more-config = { version = "2.1.4", features = ["all"] }
rcron = "1.2.3"
reqwest = "0.12.7"
serde = "1.0.210"
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tweety-rs = "0.1.4"
chrono = "0.4.38"
rand = "0.8.5"
